--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/style/style.css">
+    <script src="/public/scripts/script.js"></script>
     <title>Digital Tasks</title>
 </head>
 <body>
-    
+    <div id="contentWrapper">
+        <header>
+
+        </header>
+        <main></main>
+        <footer></footer>
+    </div>
 </body>
 </html>
