--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/style/style.css">
     <script src="/public/scripts/script.js"></script>
     <title>Digital Tasks</title>
@@ -10,7 +13,7 @@
 <body>
     <div id="contentWrapper">
         <header>
-
+                <h1>Digital Tasks  <section class="underline"></section></h1>
         </header>
         <main></main>
         <footer></footer>
