--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
         <header>
                 <h1>Digital Tasks  <section class="underline"></section></h1>
         </header>
-        <main></main>
+        <main>
+            <nav>
+                <ul>
+                    <li id="Home" class="navItem"><a class="navigationLinks" href="#Home">Home</a></li>
+                    <li class="navItem"><a class="navigationLinks" href="#Sobre">Sobre</a></li>
+                    <li class="navItem"><a class="navigationLinks" href="#Home"> <img src="./public/img/favicon-32x32.png">  </a></li>
+                    <li class="navItem"><a class="navigationLinks" href="#Projetos">Projetos</a></li>
+                    <li class="navItem"><a class="navigationLinks" href="#Contato">Contato</a></li>
+                </ul>
+            </nav>
+        </main>
         <footer></footer>
     </div>
 </body>
